@@ -1,3 +1,7 @@
+2020-12-12 <pepa65@passchier.net>
+- Allow custom names for mapping and index variables
+- More extensive help and error messages
+
 2020-12-11 <pepa65@passchier.net>
 - Added variable for line index counter
 - Always use variable names m and i
